--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "node ./node_modules/redoc-cli/index.js bundle petstore.json",
+    "build": "node ./node_modules/redoc-cli/index.js bundle petstore.json -o index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
